testsuite/tests/typecheck/should_fail/T1897a.stderr

T1897a.hs:9:1: error:
    Could not deduce (Wob a0 b)
    from the context: Wob a b
      bound by the inferred type for ‘foo’: Wob a b => b -> [b]
      at T1897a.hs:9:1-24
    The type variable ‘a0’ is ambiguous
    When checking that ‘foo’ has the inferred type
      foo :: forall a0 b0. Wob a0 b0 => b0 -> [b0]
    Probable cause: the inferred type is ambiguous
